...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pYj-E7-itt">
                                        <rect key="frame" x="20" y="0.0" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NSx-ba-p2C">
                                        <rect key="frame" x="20" y="54" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lSF-xD-s5f">
                                        <rect key="frame" x="186" y="108" width="42" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                        <state key="normal" title="Log In"/>
                                        <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXa-F5-U3W">
                                        <rect key="frame" x="182" y="158" width="50" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="toSignUpPage">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tIV-ox-d0a">
                                        <rect key="frame" x="20" y="0.0" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="usernameLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EEv-6C-Jgb">
                                        <rect key="frame" x="20" y="108" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bio" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pIM-uq-nTa">
                                        <rect key="frame" x="20" y="270" width="374" height="68"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bioLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OtC-LM-B5F">
                                        <rect key="frame" x="180" y="358" width="54" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signUpBtn">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UZO-2G-MW8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Products" image="square.grid.4x3.fill" catalog="system" id="ByC-Ba-vLA"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Wts-n1-6e0">
...
