//
//  CommonResult.swift
//  GShop
//
//  Created by Matthew on 17.02.2021.
//  Copyright © 2021 Ostagram Inc. All rights reserved.
//

import Foundation

struct CommonResult: Codable {
    let result: Int
}
