//
//  SignUpPresenter.swift
//  GShop
//
//  Created by Matthew on 11.03.2021.
//  Copyright (c) 2021 Ostagram Inc.. All rights reserved.
//
//  This file was generated by the Clean Swift Xcode Templates so
//  you can apply clean architecture to your iOS and Mac projects,
//  see http://clean-swift.com
//

import UIKit

protocol SignUpPresentationLogic {
    func present(response: SignUpEnum.SignUpAction.Response)
}

class SignUpPresenter: SignUpPresentationLogic {
    weak var viewController: SignUpDisplayLogic?
    
    // MARK: Do something
    
    func present(response: SignUpEnum.SignUpAction.Response) {
        DispatchQueue.main.async {
            if response.success {
              let viewModel = SignUpEnum.SignUpAction.ViewModel(
                showModal: true,
                textMessage: "Successfully")
                self.viewController?.displayResult(viewModel: viewModel)
            } else {
                let viewModel = SignUpEnum.SignUpAction.ViewModel(
                  showModal: true,
                  textMessage: "Fail")
                self.viewController?.displayResult(viewModel: viewModel)
            }
        }
        
    }
}
